# Netologia-programming

./: .gitignore  README.md
DZ  smart pointer 2/: DZ  smart pointer 2.sln
DZ 10.1/: CMakeLists.txt  Source.cpp
DZ 10.2/: CMakeLists.txt  Main.cpp  Parallelogram.h  Quadrangle.cpp  RAtriangle.h  Rectangle.h  Rhomb.cpp  Triangle.h
DZ 11.3/: CMakeLists.txt
DZ 2.1/: 2.1.sln
DZ 2.2/: DZ 2.2.sln
DZ 2.3/: DZ 2.3.sln
DZ 3.1/: DZ 3.1.sln
DZ 3.1 parall/: DZ 3.1 parall.sln
DZ 3.2 parall/: DZ 3.2 parall.sln
DZ 4.1/: DZ 4.1.sln
DZ 4.2/: DZ 4.2.sln
DZ 5.1/: DZ 5.1.sln
DZ 5.2/: DZ 5.2.sln
DZ 5.3/: DZ 5.3.sln
DZ 6.1/: DZ 6.1.sln
DZ 6.2/: DZ 3.2.sln
DZ 7.1/: DZ 7.1.sln
DZ 7.2/: DZ 7.2.sln
DZ 8.1/: DZ 8.1.sln
DZ 8.2/: DZ 6.3.sln  DZ 8.2.sln
DZ 9.1/: DZ 9.1.sln
DZ 9.2/: DZ 9.2.sln
DZ Move Cinimatic 2/: DZ Move Cinimatic 2.sln
DZ SQL/: Create.sql  Insert.sql  Select.sql
DZ STD 1/: DZ STD 1.sln
DZ STD 2/: DZ STD 2.sln
DZ STD 3/: DZ STD 3.sln
DZ Smart pointer/: DZ Smart pointer.sln
DZ Templates and Functor 1/: DZ Templates and Functor 1.sln
DZ Templates and Functors 3/: DZ Templates and Functors 3.sln
DZ Templetes and Fuctors 2/: DZ Templetes and Fuctors 2.sln
DZ move cinimatic/: DZ move cinimatic.sln
DZ paral 2.2/: DZ paral 2.2.sln
DZ parall 1.1/: DZ parall 1.1.sln
DZ parall 1.2/: DZ parall 1.2.sln
DZ parall 2.1/: DZ parall 2.1.sln
DZ parall 2.3/: DZ parall 2.3.sln
DZ pqxx/: Project1.sln
DZ test/: CMakeLists.txt  (+1 more)
SqlSelectBuilder/: CMakeLists.txt  SqlSelectQueryBuilder.cpp  SqlSelectQueryBuilder.h  main.cpp
(+367 files in other folders)
